--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 	<ul>
 		
 	</ul>
-	<script src="./js/jquery.min.js"></script>
-	<script src="./js/waterfall.min.js"></script>
+	<script src="./demo/js/jquery.min.js"></script>
+	<script src="./demo/js/waterfall.min.js"></script>
 	<script>
 		var datas = ['http://photo.mac69.com/180419/180419_44/bGurdlZCLK_small.jpg',
 			'http://pic.52112.com/171201/Female_hairdresser/wxDhnF7E9c.jpg',
